cmake_minimum_required(VERSION 3.10)
project(DesignPatterns)

add_subdirectory(CreationalPatterns/AbstractFactory)
add_subdirectory(CreationalPatterns/Builder)
add_subdirectory(CreationalPatterns/FactoryMethod)
add_subdirectory(CreationalPatterns/Prototype)
add_subdirectory(CreationalPatterns/Singleton)

add_subdirectory(StructuralPatterns/Adapter)
add_subdirectory(StructuralPatterns/Bridge)
add_subdirectory(StructuralPatterns/Composite)
add_subdirectory(StructuralPatterns/Decorator)
add_subdirectory(StructuralPatterns/Facade)
add_subdirectory(StructuralPatterns/Flyweight)
add_subdirectory(StructuralPatterns/Proxy)

add_subdirectory(BehavioralPatterns/ChainOfResponsibility)
add_subdirectory(BehavioralPatterns/Command)
add_subdirectory(BehavioralPatterns/Interpreter)
add_subdirectory(BehavioralPatterns/Iterator)
add_subdirectory(BehavioralPatterns/Mediator)
add_subdirectory(BehavioralPatterns/Memento)
add_subdirectory(BehavioralPatterns/Observer)
add_subdirectory(BehavioralPatterns/State)
add_subdirectory(BehavioralPatterns/Strategy)
add_subdirectory(BehavioralPatterns/TemplateMethod)
add_subdirectory(BehavioralPatterns/Visitor)